--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-<h1>Estudante: Paulo Henrique Kedziarski Stein</h1>
-<img src="Screenshot_20230322-152606_(1).png" alt="">
+    <header>
+      <h1>Estudante: Paulo Henrique Kedziarski Stein</h1>
+      <img src="Screenshot_20230322-152606_(1).png" alt="">
+    </header>
 <p> Meu nome é Paulo tenho 15 anos 1,95 de altura estudo no Wilson Joffre, gosto de jogar vôlei e sou um amante de carros.</p>
 <li>Pagina inicial</li>
 <li>Biografia</li>
